# generals_helper

./: .gitignore  README.md  jsconfig.json  manifest.json  package.json  start_https_bridge.ps1
python_bridge/: PROTOCOL.md  README.md  __init__.py  analyzer.py  protocol.py  pyproject.toml  server.py  store.py
python_bridge/tests/: test_https_cert_helper.py  test_server.py
src/background/: battle-frame-state.js  frame-store.js  match-state.js  python-bridge-controller.js  service-worker.js
src/content/: content.js  frame-view.js  panel.html
src/display/: display-board.js  display-main.js  display-players.js  display.html  display.js
src/injected/: ws-hook.js
src/options/: options.html  options.js
src/popup/: popup.html  popup.js
src/shared/: battle-analyzer.js  battle-debug.js  battle-map-diff.js  battle-map-state.js  battle-packet-parser.js  dom-utils.js  frame-tools.js  helper-config.js  python-bridge.js  runtime-message.js  tab-utils.js
tests/: display.test.js  frame-tools.test.js  match-state.test.js  python-bridge-controller.test.js  python-bridge.test.js  service-worker.test.js
tools/: clean_svg_patterns.py  generate_local_https_cert.py
types/: chrome.d.ts
